--- a/09_final-project_smart-brain/practices/30_asynchronous_api/src/App.css
+++ b/09_final-project_smart-brain/practices/30_asynchronous_api/src/App.css
@@ -13,7 +13,7 @@ body {
 
 
 .App-header {
-	background-color: #282c34;
+	background-color: rgb(26, 47, 90);
 	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
