--- a/09_final-project_smart-brain/practices/31_final-project_smart-brain/frontend/src/components/DetectionPanel/DetectionPanel.module.css
+++ b/09_final-project_smart-brain/practices/31_final-project_smart-brain/frontend/src/components/DetectionPanel/DetectionPanel.module.css
@@ -1,6 +1,7 @@
 .DetectionPanel {
 	min-height: 300px;
-	width: 500px;
+	height: 30vh;
+	width: 50vw;
 	backdrop-filter: blur(8px);
 	box-shadow: 0 0 20px 3px #DEF;
 	border-radius: 3px;
